router/iptables/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Sun Jun  9 01:19:42 2024
*filter
:INPUT DROP [73293:12787306]
:FORWARD DROP [10854:1081055]
:OUTPUT ACCEPT [756247:83412895]
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i ens20 -j ACCEPT
-A INPUT -d 10.1.1.163/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 10.0.0.0/8 -o ens18 -j DROP
-A FORWARD -d 172.16.0.0/12 -o ens18 -j DROP
-A FORWARD -d 192.168.0.0/16 -o ens18 -j DROP
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens20 -j ACCEPT
-A FORWARD -d 192.168.16.234/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.16.0/24 -d 10.113.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.16.0/24 -d 10.113.0.0/16 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -d 192.168.16.153/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.16.153/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.16.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.16.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.254.3/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.254.3/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.254.3/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.254.3/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.16.153/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -d 192.168.16.153/32 -p tcp -m tcp --dport 853 -j ACCEPT
-A FORWARD -d 192.168.16.25/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -d 192.168.16.25/32 -p tcp -m tcp --dport 110 -j ACCEPT
-A FORWARD -d 192.168.16.25/32 -p tcp -m tcp --dport 143 -j ACCEPT
-A FORWARD -d 192.168.16.25/32 -p tcp -m tcp --dport 993 -j ACCEPT
-A FORWARD -s 192.168.16.25/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -s 192.168.16.25/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.16.25/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.16.112/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.16.40/32 -p tcp -m tcp --dport 636 -j ACCEPT
-A FORWARD -d 192.168.16.41/32 -p tcp -m tcp --dport 636 -j ACCEPT
-A FORWARD -s 192.168.16.41/32 -p tcp -m tcp --dport 636 -j ACCEPT
-A FORWARD -s 192.168.16.40/32 -p tcp -m tcp --dport 636 -j ACCEPT
-A FORWARD -s 192.168.16.40/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.16.41/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.16.41/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.16.40/32 -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Sun Jun  9 01:19:42 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Sun Jun  9 01:19:42 2024
*nat
:PREROUTING ACCEPT [227115:39592073]
:INPUT ACCEPT [67325:20074862]
:OUTPUT ACCEPT [271929:28340399]
:POSTROUTING ACCEPT [280831:29027665]
-A POSTROUTING -s 192.168.16.0/24 -o ens18 -j MASQUERADE
-A POSTROUTING -s 192.168.16.0/24 -o ens18 -j MASQUERADE
COMMIT
# Completed on Sun Jun  9 01:19:42 2024
